[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name="Asteroidpy"
version="0.1"
authors=[{name="Sirio Negri",email="ziriuz84@gmail.com"}]
description="A tool for asteroid observation scheduling and analysis"
readme="README.md"
requires-python=">=3.9"
license={"text": "GPL v3"}
classifiers=[
"Development Status :: 4 - Beta",
"Intended Audience :: Science/Research",
"License :: OSI Approved :: GPL v3",
"Operating System :: POSIX :: Linux",
"Programming Language :: Python :: 3",
]
license-files=["LICENSE"]

[project.urls]
Homepage="https://github.com/ziriuz84/asteroidpy"
Issues="https://github.com/ziriuz84/asteroidpy/issues"
