[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name="Asteroidpy"
dynamic = ["version"]
authors=[{name="Sirio Negri",email="ziriuz84@gmail.com"}]
description="A tool for asteroid observation scheduling and analysis"
readme="README.md"
requires-python=">=3.9"
license="GPL-3.0"
dependencies=[
    "textual>=8.0,<9",
    "requests",
    "beautifulsoup4",
    "configparser",
    "astropy",
    "httpx",
    "astroplan",
    "lxml",
    "astroquery",
    "platformdirs",
]
classifiers=[
"Development Status :: 5 - Production/Stable",
"Intended Audience :: Science/Research",
# "License :: OSI Approved :: GPL v3",
"Operating System :: OS Independent",
"Programming Language :: Python :: 3",
]
license-files=["LICENSE"]

[tool.setuptools.dynamic]
version = {attr = "asteroidpy.version.__version__"}

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[project.urls]
Homepage="https://github.com/ziriuz84/asteroidpy"
Issues="https://github.com/ziriuz84/asteroidpy/issues"

[tool.black]
target-version = ["py39"]

[tool.isort]
profile = "black"
